[package]
name = "rng-class"
version = "0.1.0"
description = "Created with Anchor"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "rng_class"

[features]
default = []
cpi = ["no-entrypoint"]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
idl-build = ["anchor-lang/idl-build"]

[dependencies]
anchor-lang = "0.30.1"
anchor-instruction-sysvar = { git = "https://github.com/ShrinathNR/anchor-instruction-sysvar.git", branch = "version-upgrade"}
solana-program = "1.18.17"